Added The new cards and effect

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/fiber": "^8.15.19",
     "@tabler/icons-react": "^3.1.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
     "mini-svg-data-uri": "^1.4.4",
